fix: Fixed raid icon being misaligned on mobile

--- a/modules/routes/web/static/style.css
+++ b/modules/routes/web/static/style.css
@@ -831,6 +831,8 @@ body {
 }
 
 .nav-group .nav-link {
+    display: flex;
+    align-items: center;
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
     transition: background-color 0.2s, color 0.2s;
